Remove "changeResourceType" method because useless. Sonar bug fixing- Declarations should use Java collection interfaces such as "List" rather than specific implementation classes such as "LinkedList"